fix: remove the hover effect on mobile devices

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -6,18 +6,22 @@
   margin: 0;
   padding: 0;
 }
+
 :root {
   font-family: "Red Hat Display", sans-serif;
 }
+
 body {
   background-color: variables.$primary-color;
   overflow-x: hidden;
 }
+
 p,
 h1,
 h2 {
   text-align: center;
 }
+
 button {
   width: 12rem;
   padding: 1rem;
@@ -71,8 +75,10 @@ button {
   background-color: variables.$secondary-color;
   color: variables.$primary-color;
 
-  &:hover {
-    background-color: variables.$downy;
+  @media (hover: hover) {
+    &:hover {
+      background-color: variables.$downy;
+    }
   }
 
   span {
@@ -82,10 +88,8 @@ button {
 .section__button {
   background-color: variables.$deluge;
   color: variables.$alabaster;
-
-  &:hover {
-    background-color: #b18bdd;
-    @include mixins.breakpoint("tablet") {
+  @media (hover: hover) {
+    &:hover {
       background-color: variables.$lavender;
     }
   }
